added binary tree , bs and quick sort

--- a/new datastructure coding/.vscode/settings.json
+++ b/new datastructure coding/.vscode/settings.json
@@ -2,6 +2,7 @@
   "files.associations": {
     "stdio.h": "c",
     "singlylinkedlist.h": "c",
-    "binaryheader.h": "c"
+    "binaryheader.h": "c",
+    "sorting.h": "c"
   }
 }
